--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: Vasárnapi Könyv. 1914. Első  félév 9. füzet
 url: http://www.gutenberg.org/ebooks/30060
